# leetcode-cpp-scaffold

./: .clang-format  .gitignore  CMakeLists.txt  fetch.py  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-agent.yml
src/100_SameTree/: solution.h  test.cpp  test_cases.json
src/101_SymmetricTree/: solution.h  test.cpp  test_cases.json
src/114_FlattenBinaryTreeToLinkedList/: solution.h  test.cpp  test_cases.json
src/1_TwoSum/: solution.h  test.cpp  test_cases.json
templates/: solution.h.jinja2  test.cpp.jinja2
util/: data_structure.cpp  data_structure.h  io.cpp  io.h  leetcode.h
